--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
     xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
+        <groupId>org.jitsi</groupId>
+        <artifactId>jitsi-universe</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../jitsi-universe/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -23,9 +24,9 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:https://github.com/dnsjava/dnsjava</connection>
-        <developerConnection>scm:git:git@github.com:dnsjava/dnsjava</developerConnection>
-        <url>https://github.com/dnsjava/dnsjava</url>
+        <connection>scm:git:https://github.com/jitsi/dnsjava</connection>
+        <developerConnection>scm:git:git@github.com:jitsi/dnsjava</developerConnection>
+        <url>https://github.com/jitsi/dnsjava</url>
         <tag>v2.1.6</tag>
     </scm>
     <developers>
@@ -34,11 +35,6 @@
             <name>Brian Wellington</name>
         </developer>
     </developers>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <target.jdk>1.4</target.jdk>
-    </properties>
 
     <build>
         <sourceDirectory>./</sourceDirectory>
@@ -58,7 +54,6 @@
         <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.4</version>
         <executions>
           <execution>
             <id>sign-artifacts</id>
@@ -72,10 +67,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
                 <configuration>
-                    <source>${target.jdk}</source>
-                    <target>${target.jdk}</target>
                     <encoding>iso8859-1</encoding>
                     <testExcludes>
                         <!-- Exclude unit tests with external dependencies -->
@@ -94,7 +86,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
                 <configuration>
                     <includes>
                         <include>*.java</include>
@@ -116,7 +107,6 @@
 
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
                 <configuration>
                     <archive>
                         <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
@@ -150,7 +140,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
                 <configuration>
                     <excludePackageNames>*.tests.*</excludePackageNames>
                     <sourcepath>./org</sourcepath>
